--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -47,9 +47,6 @@ password = false
 # downloads all sources in the catalog.
 num_sources = -1
 
-# The number of sources to skip in the catalog. Default is 0.
-offset = 0
-
 # The number of concurrent connections to use when downloading data.
 concurrent_connections = 4
 
@@ -133,49 +130,44 @@ name = "CifarDataSet"
 crop_to = false
 
 # Specific to `hsc_data_set`. Limit to only particular filters from the data set.
-# When `false`, uses all filters found in the data set.
+# When `false`, use all filters. Options: ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
 filters = false
 
 # Path to a fits file that specifies object IDs to use from the data stored in
 # [general].data_dir. Implementation is data_set class dependent. Use `false` for no filtering.
 filter_catalog = false
 
-# For train_size, validation_size, and test_size, the following options are available:
-# A `float` between `0.0` and `1.0` is the proportion of the dataset to include in the split.
-# If `int`, represents the absolute number of samples in the particular split.
-# It is an error for these values to add to more than 1.0 as ratios or the size
-# of the dataset if expressed as integers.
+# train_size, validation_size, and test_size use these conventions:
+# * A `float` between `0.0` and `1.0` is the proportion of the dataset to include in the split.
+# * An `int`, represents the absolute number of samples in the particular split.
+# * It is an error for these values to add to more than 1.0 as ratios or the size
+#   of the dataset if expressed as integers.
 
-# Size of the train split.
-# If `false`, the value is automatically set to the complement of test_size.
+# Size of the train split. If `false`, the value is automatically set to the
+# complement of test_size plus validate_size (if any).
 train_size = 0.6
 
-# Size of the validation split.
-# If `false`, and both train_size and test_size are defined, the value is set
-# to the complement of the other two sizes summed.
+# Size of the validation split. If `false`, and both train_size and test_size
+# are defined, the value is set to the complement of the other two sizes summed.
 # If `false`, and only one of the other sizes is defined, no validate split is created.
 validate_size = 0.2
 
-# Size of the test split.
-# If `false`, the value is set to the complement of train_size.
-# If `false` and `train_size = false`, test_size is set to `0.25`.
+# Size of the test split. If `false`, the value is set to the complement of train_size plus
+# the validate_size (if any). If `false` and `train_size = false`, test_size is set to `0.25`.
 test_size = 0.2
 
 # Number to seed with for generating a random split. Use `false` to seed from a
 # system source at runtime.
 seed = false
 
-# If `true`, cache data in memory during training. For training, this reduces runtimes
-#after the first epoch. Set to `false` to disable caching or when running inference.
+# If `true`, cache samples in memory during training to reduce runtime after the
+# first epoch. Set to `false` when running inference or on memory-constrained systems.
 use_cache = true
 
 
 [data_loader]
 # The number of data points to load at once.
-batch_size = 32
-
-# Whether the input data is shuffled before being loaded.
-shuffle = false
+batch_size = 512
 
 # Number of subprocesses for data loading. Typically between 2 and the number of CPUs.
 num_workers = 2
