WIP Initial commit to get some things logged to mlflow.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "numpy", # Used in Holoviews visualization prototype
     "scipy", # Used in Holoviews visualization prototype
     "cython", # Used in Holoviews visualization prototype
+    "mlflow", # Used to log training metrics and compare models
 ]
 
 [project.scripts]
