Adding training and validation loss to mlflow metrics as well as system metrics (including cpu, gpu, memory, and network info stats).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "scipy", # Used in Holoviews visualization prototype
     "cython", # Used in Holoviews visualization prototype
     "mlflow", # Used to log training metrics and compare models
+    "pynvml", # Used to gather GPU usage information
 ]
 
 [project.scripts]
