Adding onnx and onnxruntime as dependencies. Made `model_exporter` a little less PyTorch focused.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "pynvml", # Used to gather GPU usage information
     "umap-learn", # Used to map latent spaces down to 2d
     "pooch", # Used to download data files
+    "onnx", # Used to export models to ONNX format
+    "onnxruntime", # Used to run ONNX models
 ]
 
 [project.scripts]
