--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,6 +45,15 @@ repos:
     hooks:
       - id: check-github-workflows
         args: ["--verbose"]
+  - repo: local
+    hooks:
+      - id: xcxc-check
+        name: Check for note-to-self comments (xcxc)
+        description: Grep all source files for xcxc which signifies a comment that shouldn't be checked in.
+        entry: bash -c "[[ $(grep -riI xcxc --exclude .pre-commit-config.yaml --exclude-dir _readthedocs --exclude-dir htmlcov ./* >&2 ; echo $?) == 1 ]]"
+        language: system
+        pass_filenames: false
+        always_run: true
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
     rev: v0.11.2
